Fixed overlay from covering up typehead dropdown

--- a/app/bundles/CoreBundle/Assets/css/app.less
+++ b/app/bundles/CoreBundle/Assets/css/app.less
@@ -80,7 +80,7 @@
 .content-overlay {
   position: absolute;
   background: #fbfbfb;
-  z-index: 1050;
+  z-index: 50;
   width: 100%;
   height: 100%;
   padding-left: 15px;
